k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldn-ui
  namespace: learndevopsnow
  labels:
    app: ldn-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ldn-ui
  template:
    metadata:
      labels:
        app: ldn-ui
    spec:
      containers:
        - name: ldn-container
          image: mahar.azurecr.io/ldn-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
